--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ allprojects {
         ext.kotlin_version = '1.2.71'
         ext.kotlin_native_version = '0.9.2'
         ext.coroutines_version = '0.30.2'
+        ext.ktor_version = '0.9.5'
         ext.serialization_version = '0.6.2'
         ext.android_plugin_version = '3.2.1'
 
@@ -24,6 +25,8 @@ allprojects {
 
     repositories {
         maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "http://dl.bintray.com/kotlinx/kotlinx" }
+        maven { url 'https://dl.bintray.com/kotlin/ktor' }
         google()
         jcenter()
     }
