--- a/common-client-jvm/build.gradle
+++ b/common-client-jvm/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "io.ktor:ktor-client-android:$ktor_version"
 }
 
 compileKotlin {
