--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'movies-multiplatform'
 
-include 'common', 'common-jvm', 'common-ios', 'common-client', 'common-client-jvm', 'common-client-ios', 'android', 'android:app'
+include 'common', 'common-jvm', 'common-ios', 'common-client', 'common-client-jvm', 'common-client-ios', 'android'
 
 enableFeaturePreview('GRADLE_METADATA')
