--- a/common-client-jvm/build.gradle
+++ b/common-client-jvm/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'kotlin-platform-jvm'
 
 dependencies {
     expectedBy project(':common-client')
-    api project(':common-jvm')
-
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation "io.ktor:ktor-client-android:$ktor_version"
+    compile project(':common-jvm')
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    compile "io.ktor:ktor-client-android:$ktor_version"
 }
 
 compileKotlin {
