--- a/common-ios/build.gradle
+++ b/common-ios/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 }
 
 sourceSets {
+    //noinspection GroovyAssignabilityCheck
     main {
         component {
             targets = ['ios_x64', 'ios_arm64']
