--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'kotlin-platform-common'
 
 dependencies {
-    api 'org.jetbrains.kotlin:kotlin-stdlib-common'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-common'
 }
