--- a/common-ios/build.gradle
+++ b/common-ios/build.gradle
@@ -1,16 +1,20 @@
 apply plugin: 'kotlin-platform-native'
 
 dependencies {
-    expectedBy project(':common')
+	expectedBy project(':common')
+	implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
 }
 
 sourceSets {
-    //noinspection GroovyAssignabilityCheck
-    main {
-        component {
-            targets = ['ios_x64', 'ios_arm64']
-            outputKinds = [KLIBRARY]
-            extraOpts '--disable', 'devirtualization', '-module_name', 'K'
-        }
-    }
+	main {
+		component {
+			targets = ['ios_arm64', 'ios_x64']
+            outputKinds = [FRAMEWORK]
+		}
+	}
+	test {
+		component {
+			targets = ['ios_arm64', 'ios_x64']
+		}
+	}
 }
