--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -22,7 +23,7 @@ android {
 }
 
 dependencies {
-    api project(':common-client-jvm')
+    api project(':common-android')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
