--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,28 @@
-allprojects {
-    buildscript {
-        ext.kotlin_version = '1.2.71'
-        ext.kotlin_native_version = '0.9.2'
-        ext.coroutines_version = '0.27.0'
-        ext.ktor_version = '0.9.5'
-        ext.serialization_version = '0.6.2'
-        ext.android_version = '3.2.1'
-
-        repositories {
-            maven { url "https://dl.bintray.com/jetbrains/kotlin-native-dependencies" }
-            maven { url "https://kotlin.bintray.com/kotlinx" }
-            google()
-            jcenter()
-        }
-
-        dependencies {
-            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-            classpath "org.jetbrains.kotlin:kotlin-native-gradle-plugin:$kotlin_native_version"
-            classpath "org.jetbrains.kotlinx:kotlinx-gradle-serialization-plugin:$serialization_version"
-            classpath "com.android.tools.build:gradle:$android_version"
-        }
-    }
+buildscript {
+    ext.kotlin_version = '1.3.0'
+    ext.android_version = '3.2.1'
+    ext.serialization_version = '0.9.0'
 
     repositories {
-        maven { url "https://dl.bintray.com/kotlin/ktor" }
-        maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "https://dl.bintray.com/jetbrains/kotlin-native-dependencies" }
         google()
         jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-native-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$android_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+    }
+}
+
+allprojects {
+    repositories {
+        maven { url "https://dl.bintray.com/kotlin/kotlinx" }
+        google()
+        jcenter()
+        mavenCentral()
     }
 }
