--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'kotlin-platform-common'
+apply plugin: 'kotlinx-serialization'
 
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-common'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
 }
