--- a/common-ios/build.gradle
+++ b/common-ios/build.gradle
@@ -1,20 +1,21 @@
 apply plugin: 'kotlin-platform-native'
 
 dependencies {
-	expectedBy project(':common')
-	implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
+    expectedBy project(':common')
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
 }
 
 sourceSets {
-	main {
-		component {
-			targets = ['ios_arm64', 'ios_x64']
+    main {
+        component {
             outputKinds = [FRAMEWORK]
-		}
-	}
-	test {
-		component {
-			targets = ['ios_arm64', 'ios_x64']
-		}
-	}
+            targets = ['ios_arm64', 'ios_x64']
+            baseName = "KotlinCommon"
+        }
+    }
+    test {
+        component {
+            targets = ['ios_arm64', 'ios_x64']
+        }
+    }
 }
