--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://dl.bintray.com/kotlin/kotlinx" }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
         google()
         jcenter()
         mavenCentral()
